0.3.01 (--.--.2014):
- added support for proxy auto-config (PAC);
- various small fixes.

0.2.01 (01.02.2014):
- added support for profiles defining keyboard shortcuts and action macros;
- added support for proxy configuration;
- added quick go to or search of clipboard contents on middle click on address field;
- added option to delay loading of tab contents until selected;
- added option to disable referrer;
- modified appearance of search widget;
- minor improvements in cache viewer;
- some other fixes and minor improvements.

0.1.01 (01.01.2014):
- added dedicated context menu for media content (AUDIO and VIDEO tags);
- added global history with manager;
- added dialog to clear history (browsing, cookies, caches etc.);
- added cache viewer (about:cache);
- implemented tab detaching;
- overhauled about: pages;
- some optimizations and other changes.

0.0.02 (22.12.2013):
- added warning in case of SSL errors;
- added web search capabilities;
- added advanced configuration page (about:config);
- added preferences dialog (not all options are implemented yet);
- added CMake project file;
- added bookmarks manager;
- implemented dialogs that are model only for single tab instead of whole window (used by JavaScript pop-ups (alert confirm, prompt), authentication and image properties dialogs);
- implemented quick search menu for text selection;
- implemented more missing context menu actions;
- implemented adding search engines from scratch or web page FORM;
- implemented restoring of tab history from previous session;
- many other changes.

0.0.01 (11.12.2013):
- initial release;
- added basic MDI+TDI interface;
- added private browsing capabilities;
- added basic support for bookmarks (XBEL format);
- added basic support for saving, restoring and manually deleting cookies;
- added transfers manager;
- added basic sessions management;
- added detailed progress bar;
- implemented backends for layout engines (for now only QtWebKit)