@@ -1,4 +1,5 @@
 0.3.01 (--.--.2014):
+- added option to set custom User Agent (for single tab or whole application);
 - added support for proxy auto-config (PAC);
 - various small fixes.
 
